# your-new-face

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20260509_0001_create_tasks.py  20260510_0002_add_task_target_age.py
api/: celery_app.py  config.py  db.py  index.html  main.py  models.py  repositories.py  storage.py
api/static/: index.html
expirements/: test3.py  test4.py
k8s/: api.yaml  basic-auth-secret.yaml  celery_worker.yaml  config.yaml  cron.yaml  docker-registry-secret.yaml  revproxy.yaml  rmq.yaml
monitoring/: grafana-dashboards.yml  prometheus.yml  promtail-config.yml  your-new-face-overview.json
new_face/: age_run_config.py  celery_app.py  check1.py  evaluate_face.py  main.py  precompute_svdmix_loras.py  svdmix_age_task.py  test1_scrfd.py  test2.py  test4.py  test_single_pass.py
new_face/data/: age_coefficients.json
new_face/data/age_prompts/: 20.json  30.json  40.json  50.json  60.json  70.json
new_face/data/svdmix/: age_group_prompts.json  age_transition_coefficients_by_group.json  refined_selected_params.json  svdmix_production_selected_params.json
new_face/telebot/: aiogram_run.py  create_bot.py  text.py
new_face/telebot/handlers/: start.py
new_face/telebot/keyboards/: all_keyborad.py  inline_kbs.py
new_face/workers/: add_task.py  job.py  tasks.py  test_task.py  worker.py
rmq/: Dockerfile
rqm/: Dockerfile  definitions.json
telebot/: aiogram_run.py  create_bot.py
telebot/filters/: is_admin.py
telebot/handlers/: start.py
telebot/keyboards/: all_keyborad.py  inline_kbs.py
telebot/utils/: utils.py
workers/: job.py  tasks.py
