[project]
name = "your-new-face"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "deepface>=0.0.99",
    "diffusers>=0.37.1",
    "pathlib>=1.0.1",
    "pre-commit>=4.5.1",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.11",
    "tensorflow>=2.21.0",
    "tf-keras>=2.21.0",
    "torch>=2.9.1",
    "torchvision==0.24.1", #not work without this. says hash mismathes
    "transformers>=5.4.0",
]




[dependency-groups]
# Для разработки и тестирования
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",                    
]
[tool.uv.sources]
torch = [
  { index = "pytorch-cu130",marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
